smal fix
